--- a/bs_encryption/android/app/src/debug/AndroidManifest.xml
+++ b/bs_encryption/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bank_statement_encryption">
+    package="com.example.bs_encryption">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
