--- a/bs_encryption/pubspec.yaml
+++ b/bs_encryption/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^1.1.0
+  flutter_svg: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,7 +41,15 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/images/bank-icon.png
+    - assets/images/
+    - assets/icons/
+    - assets/svg/
+
+  fonts:
+    - family: nav_drawer
+      fonts:
+        - asset: assets/icons/nav_drawer.ttf
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
