--- a/bs_encryption/pubspec.yaml
+++ b/bs_encryption/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^1.1.0
   flutter_svg: ^0.18.0
+  local_auth: ^0.6.3+4
 
 
   # The following adds the Cupertino Icons font to your application.
