--- a/bs_encryption/pubspec.yaml
+++ b/bs_encryption/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_svg: ^0.18.0
   local_auth: ^0.6.3+4
+  flutter_secure_storage: ^3.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
