--- a/bs_encryption/pubspec.yaml
+++ b/bs_encryption/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^0.18.0
   local_auth: ^0.6.3+4
   flutter_secure_storage: ^3.3.5
+  flutter_pdf_viewer: ^0.6.1
 
 
   # The following adds the Cupertino Icons font to your application.
